Moved most of the UI elements out of Game and into GameUI. Restructured a lot of the code to use events instead of direct notification.  There may be some bugs as a result. We need to put a document together that describes all the events and exactly when they should be fired.  Right now they seem mismashy.